[gd_scene load_steps=14 format=3 uid="uid://dsx3xw6m8slf0"]

[ext_resource type="Script" uid="uid://cxualhvl5swtj" path="res://Escenas/Tests/battle_test.gd" id="1_oupmm"]
[ext_resource type="Texture2D" uid="uid://38tm31xes4r2" path="res://Assets/Sprites/Batalla/Battle_Background.png" id="1_usg2e"]
[ext_resource type="PackedScene" uid="uid://cejlim0iphp6l" path="res://Personaje/hermana_batalla.tscn" id="2_ny4pe"]
[ext_resource type="PackedScene" uid="uid://cbg5iqhp7cdmm" path="res://Personaje/hermano_batalla.tscn" id="3_oupmm"]
[ext_resource type="PackedScene" uid="uid://cp07levo5f1aq" path="res://Personaje/enemigo1_ejemplo.tscn" id="4_81p0j"]
[ext_resource type="Resource" uid="uid://dspu7o06bk0c2" path="res://Data/Combatientes/hermana.tres" id="4_qpala"]
[ext_resource type="Script" uid="uid://dshn3ro104gu0" path="res://Escenas/Tests/BattleActionExecutor.gd" id="6_81p0j"]
[ext_resource type="Resource" uid="uid://bpk6n7knef4p2" path="res://Data/Combatientes/hermano.tres" id="6_ywwmr"]
[ext_resource type="Script" uid="uid://c023up88hq14e" path="res://Escenas/Tests/turn_system.gd" id="8_qpala"]
[ext_resource type="Resource" uid="uid://igyxtsqmdn35" path="res://Data/Combatientes/enemigo_generico.tres" id="8_twk82"]
[ext_resource type="Script" uid="uid://btj0anc1eftd3" path="res://Escenas/Tests/battle_ui.gd" id="11_78vmt"]
[ext_resource type="PackedScene" uid="uid://dm6fdoxoidwaj" path="res://UI/action_panel.tscn" id="11_mie07"]
[ext_resource type="PackedScene" uid="uid://dtf04cy75q73s" path="res://UI/character_status_panel.tscn" id="11_yknal"]

[node name="BattleTest" type="Node2D"]
script = ExtResource("1_oupmm")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(192, 108.00001)
scale = Vector2(0.8000001, 0.8000001)
texture = ExtResource("1_usg2e")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(192, 108)
limit_enabled = false

[node name="Combatant" type="Node2D" parent="."]

[node name="HermanaBatalla" parent="Combatant" instance=ExtResource("2_ny4pe")]
position = Vector2(124, 96)
scale = Vector2(0.1, 0.1)
combatant_data = ExtResource("4_qpala")

[node name="HermanoBatalla" parent="Combatant" instance=ExtResource("3_oupmm")]
position = Vector2(69.99999, 137.00002)
scale = Vector2(0.1, 0.1)
combatant_data = ExtResource("6_ywwmr")

[node name="MushroomBatalla" parent="Combatant" instance=ExtResource("4_81p0j")]
position = Vector2(271, 90)
combatant_data = ExtResource("8_twk82")

[node name="TurnSystem" type="Node" parent="."]
script = ExtResource("8_qpala")

[node name="BattleActionExecutor" type="Node2D" parent="."]
script = ExtResource("6_81p0j")

[node name="BattleUI" type="CanvasLayer" parent="."]
script = ExtResource("11_78vmt")

[node name="ActionPanel" parent="BattleUI" instance=ExtResource("11_mie07")]
offset_left = 153.0
offset_top = -127.0
offset_right = -157.0
offset_bottom = -59.0

[node name="HermanaPanel" parent="BattleUI" instance=ExtResource("11_yknal")]
offset = Vector2(10, 180)
scale = Vector2(0.3, 0.3)
transform = Transform2D(0.3, 0, 0, 0.3, 10, 180)

[node name="HermanoPanel" parent="BattleUI" instance=ExtResource("11_yknal")]
offset = Vector2(110, 180)
scale = Vector2(0.3, 0.3)
transform = Transform2D(0.3, 0, 0, 0.3, 110, 180)

[node name="EnemigoPanel" parent="BattleUI" instance=ExtResource("11_yknal")]
offset = Vector2(370, 180)
rotation = -3.1415927
scale = Vector2(0.3, -0.3)
transform = Transform2D(-0.3, 0, 0, 0.3, 370, 180)
